fix: tooltip z-index

--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/Notices/Notices.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/Notices/Notices.module.scss
@@ -1,6 +1,6 @@
 .tooltip {
     position: absolute;
-    z-index: 9;
+    z-index: 11;
     width: 377px;
     display: flex;
     flex-direction: column;
